# ChangeLog for dev-util/cccc
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cccc/ChangeLog,v 1.11 2006/06/30 10:42:50 tchiwam Exp $

  30 Jun 2006; Philippe Trottier <tchiwam@gentoo.org> :
  No bugs for >30 days. I am using this on amd64, marked stable.

  15 Apr 2006; Philippe Trottier <tchiwam@gentoo.org> :
  Added myself as a maintainer.

  15 Apr 2006; Mark Loeser <halcy0n@gentoo.org> +metadata.xml:
  Adding metadata

  15 Apr 2006; Mark Loeser <halcy0n@gentoo.org> cccc-3.0_pre63.ebuild:
  This version doesn't compile with a stable system, and the new version still
  needs testing before marking it stable

*cccc-3.1.4 (15 Apr 2006)

  15 Apr 2006; Mike Frysinger <vapier@gentoo.org> +cccc-3.1.4.ebuild:
  Version bump #124916 by Patrizio Bassi.

  09 Jun 2005; David Holm <dholm@gentoo.org> cccc-3.0_pre84.ebuild:
  Added to ~ppc.

*cccc-3.0_pre84 (08 Jun 2005)

  08 Jun 2005; Daniel Black <dragonheart@gentoo.org>
  +files/cccc-3.0_pre84-gcc34.patch, +cccc-3.0_pre84.ebuild:
  Version bump/gcc-3.4 patch thanks to halcy0n@gentoo.org in bug #64740 by
  Roland Bramm

*cccc-3.0_pre63 (14 Feb 2003)
    
  14 Feb 2003 Luca Barbato <lu_zero@gentoo.org>
  First commit
